# random

./: .gitignore  CMakeLists.txt  CMakePresets.json  ChatGPTlog.md  README.md  vcpkg.json
program/: CmakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
